<resources>
    <string name="app_name">Mobile</string>
    <string name="start">btn_start</string>
    <string name="SetAlarm">Set Alarm</string>
    <string name="timer_alarm">Timer Alarm</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="alarm_on_off">Alarm On/Off</string>
    <string name="stop">STOP</string>
    <string name="create">Create</string>
    <string name="weekdays">Weekdays</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="alarm">Alarm</string>
    <string name="vacation">Vacation</string>
...
    <string name="solve">Please solve the following tasks!</string>
    <string name="notActive">There are no active alarms!</string>
    <string name="set_date">Set Date</string>
    <string name="no_occasion">No specal occasions added yet!</string>
    <string name="toast_message">Alarm set for</string>
    <string name="description">Set the date</string>
    <string name="alarms">Alarms</string>
    <string name="calendar">Calendar</string>
    <string name="graphs">Graphs</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="timeSelected">Selected Time will display here</string>
    <string name="open_alarm">Open Alarm</string>
    <string name="vacation_day">Its your vacation day!</string>
</resources>

