...


    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_on_off"
        android:id="@+id/alarmToggle"
        android:onClick="onToggleClicked"
        android:layout_above="@+id/btnStop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="209dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:text="@string/stop"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/alarmToggle" />

    <Button
        android:id="@+id/btnOpenAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_alarm"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/alarmToggle"
        android:layout_centerHorizontal="true" />
...
