...
        android:layout_marginTop="171dp"
        android:text="Selected Time will display here"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="Click Here To Open Time Picker Dialog To pic Time" />
...
